// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MailService compileTemplate 2fa-backup-code-used snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Backup Code Used</h1>
    <p>Hi Jane Doe,</p>
    <div class="alert" style="background: #fef3c7; border-left: 4px solid #f59e0b; padding: 12px 16px; border-radius: 4px;">A two-factor authentication backup code was used to sign in to your account on 2026-04-23T04:34:19.150Z.</div>
    <p>Remaining backup codes: <strong>7</strong>. Generate new codes if you are running low.</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">If this was not you, secure your account immediately.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate contribution-confirmed snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Contribution Confirmed</h1>
    <p>Hi Jane Doe, your contribution to group <strong>Savings Circle</strong> has been confirmed.</p>
    <p class="amount" style="font-size: 28px; font-weight: bold; color: #1d4ed8;">XLM 100.00</p>
    <p>Round: 3 &bull; Date: 4/23/2026</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">Thank you for contributing on time!</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate data-export-ready snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Your Data Export is Ready</h1>
    <p>Hi Jane Doe, your requested data export is ready for download.</p>
    <p>This link expires in 48 hours.</p>
    <a class="btn" href="https://example.com/exports/sample.zip" style="display: inline-block; padding: 12px 24px; background: #4f46e5; color: #fff; text-decoration: none; border-radius: 6px;">Download Export</a>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">If you did not request a data export, please contact support immediately.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate email-verification snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Verify Your Email</h1>
    <p>Hi Jane Doe, please verify your email address to continue.</p>
    <a class="btn" href="https://example.com/auth/verify-email?token&#x3D;sample" style="display: inline-block; padding: 12px 24px; background: #4f46e5; color: #fff; text-decoration: none; border-radius: 6px;">Verify Email</a>
    <p>This link expires in 24 hours.</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">If you did not request this, please ignore this email.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate kyc-approved snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>KYC Approved <span class="badge" style="display: inline-block; background: #d1fae5; color: #065f46; padding: 4px 12px; border-radius: 999px; font-weight: bold;">✓ Verified</span></h1>
    <p>Hi Jane Doe, your identity verification has been <strong>approved</strong>.</p>
    <p>You now have full access to all platform features.</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">Thank you for verifying your identity with Ahjoorxmr.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate kyc-declined snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>KYC Verification Declined</h1>
    <p>Hi Jane Doe, unfortunately your identity verification was <strong>declined</strong>.</p>
    <div class="alert" style="background: #fee2e2; border-left: 4px solid #dc2626; padding: 12px 16px; border-radius: 4px;">Reason: Document image was blurry</div>
    <p>Please resubmit your documents addressing the issue above.</p>
    <a class="btn" href="https://example.com/kyc/resubmit" style="display: inline-block; padding: 12px 24px; background: #4f46e5; color: #fff; text-decoration: none; border-radius: 6px;">Resubmit Documents</a>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">Contact support if you need assistance.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate password-reset snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Password Reset Request</h1>
    <p>Hi Jane Doe, we received a request to reset your password.</p>
    <a class="btn" href="https://example.com/auth/reset-password?token&#x3D;sample" style="display: inline-block; padding: 12px 24px; background: #dc2626; color: #fff; text-decoration: none; border-radius: 6px;">Reset Password</a>
    <p>This link expires in 1 hour.</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">If you did not request a password reset, please ignore this email.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate payout-received snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Payout Received</h1>
    <p>Hi Jane Doe, you have received a payout from group <strong>Savings Circle</strong>.</p>
    <p class="amount" style="font-size: 32px; font-weight: bold; color: #065f46;">XLM 500.00</p>
    <p>Transaction ID: <code>abc123xyz</code></p>
    <p>Date: 4/23/2026</p>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">Thank you for being part of Ahjoorxmr.</div>
  </div>
</body>
</html>
"
`;

exports[`MailService compileTemplate welcome snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>

</head>
<body style="font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0;">
  <div class="container" style="max-width: 600px; margin: 40px auto; background: #fff; border-radius: 8px; padding: 32px;">
    <h1>Welcome to Ahjoorxmr, Jane Doe!</h1>
    <p>Your account has been created with <strong>jane@example.com</strong>.</p>
    <p>Please activate your account:</p>
    <a class="btn" href="https://example.com/auth/verify-email?token&#x3D;sample" style="display: inline-block; padding: 12px 24px; background: #4f46e5; color: #fff; text-decoration: none; border-radius: 6px;">Activate Account</a>
    <div class="footer" style="margin-top: 32px; font-size: 12px; color: #888;">If you did not create this account, please ignore this email.</div>
  </div>
</body>
</html>
"
`;
